# rsomics-clipping-profile

./: Cargo.toml  README.md
benches/: bench.rs  clipping_profile.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: clip.bam  clip.bam.bai
