[package]
name = "rsomics-clipping-profile"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-clipping-profile"
authors = ["Zane Leong <efd@live.com>"]
description = "Per-position soft-clipping profile from a BAM — Rust port of RSeQC clipping_profile.py"

[[bin]]
name = "rsomics-clipping-profile"
path = "src/main.rs"


[lib]
name = "rsomics_clipping_profile"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "clipping_profile"
harness = false
